changes made for postgres