@@ -2,7 +2,7 @@ package com.hospital.demo.controller;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import jakarta.validation.Valid;
+
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -15,56 +15,57 @@ import org.springframework.web.bind.annotation.RestController;
 import com.hospital.demo.dto.AppointmentDTO;
 import com.hospital.demo.service.AppointmentService;
 
+import jakarta.validation.Valid;
+
+
 
 @CrossOrigin(origins = "*")
 @RestController
 public class AppointmentController {
 
-    private final AppointmentService service; //http mthd
+    private final AppointmentService service;
 
     public AppointmentController(AppointmentService service) {
         this.service = service;
     }
 
-@PostMapping("/appointments")
-public List<AppointmentDTO> createAppointment(@RequestBody List<@Valid AppointmentDTO> appointments) {
-    return appointments.stream()
-            .map(service::saveAppointment)
-            .collect(java.util.stream.Collectors.toList());
-}
+    @PostMapping("/appointments")
+    public List<AppointmentDTO> createAppointment(@RequestBody List<@Valid AppointmentDTO> appointments) {
+        return appointments.stream()
+                .map(service::saveAppointment)
+                .toList();
+    }
 
-@GetMapping("/appointments")
-public List<AppointmentDTO> getAllAppointments() {
-    return service.getAllAppointments();
-}
+    @GetMapping("/appointments")
+    public List<AppointmentDTO> getAllAppointments() {
+        return service.getAllAppointments();
+    }
 
-@GetMapping("/appointments/{id}")
-public AppointmentDTO getById(@PathVariable Long id) {
-    return service.getAppointmentById(id);
-}
+    @GetMapping("/appointments/{id}")
+    public AppointmentDTO getById(@PathVariable Long id) {
+        return service.getAppointmentById(id);
+    }
 
-@PutMapping("/appointments/{id}")
-public AppointmentDTO updateAppointment(@PathVariable Long id,
-                                        @RequestBody @Valid AppointmentDTO appointmentDTO) {
-    return service.updateAppointment(id, appointmentDTO);
-}
+    @PutMapping("/appointments/{id}")
+    public AppointmentDTO updateAppointment(@PathVariable Long id,
+                                            @RequestBody @Valid AppointmentDTO appointmentDTO) {
+        return service.updateAppointment(id, appointmentDTO);
+    }
 
-@DeleteMapping("/appointments/{id}")
-public String deleteAppointment(@PathVariable Long id){
-    service.deleteAppointment(id);
-    return "Apppointment deleted successfully";
-}
+    @DeleteMapping("/appointments/{id}")
+    public String deleteAppointment(@PathVariable Long id){
+        service.deleteAppointment(id);
+        return "Appointment deleted successfully";
+    }
 
-@GetMapping("/appointments/save-test")
-public String saveTest() {
+    @GetMapping("/appointments/save-test")
+    public String saveTest() {
+        AppointmentDTO a = new AppointmentDTO();
+        a.setPatientName("Rahul");
+        a.setDoctorName("Dr. Sharma");
+        a.setAppointmentTime(LocalDateTime.parse("2026-04-23T18:30:00"));
 
-    AppointmentDTO a = new AppointmentDTO();
-    a.setPatientName("Rahul");
-    a.setDoctorName("Dr. Sharma");
-    a.setAppointmentTime(LocalDateTime.parse("2026-04-23T18:30:00"));
-
-    service.saveAppointment(a);
-
-    return "Saved via Service!";
-}
+        service.saveAppointment(a);
+        return "Saved via Service!";
+    }
 }
